# dan-glasses

./: .gitignore  AGENTS.md  INDEX.md  PRD.md  README.md  SOUL.md  STATUS.md
Services/: e2e_pipeline_test.py  requirements.txt  test_services.py  tts.py
agent-work/: ARCHITECTURE-FLAWS-BEFORE-CODE.md  REVIEW_LOOP.md  dan1-content-calendar.md  dan1-content-calendar.v104.md  dan1-content-calendar.v105.md  dan1-content-calendar.v106.md  dan1-content-calendar.v108.md  dan1-content-calendar.v110.md  dan1-content-calendar.v111.md  dan1-content-calendar.v115.md  dan1-content-calendar.v116.md  dan1-content-calendar.v117.md  dan1-content-calendar.v118-backup-2026-07-04.md  dan1-content-calendar.v118.md  dan1-content-calendar.v119.md  dan1-content-calendar.v120.md  dan1-content-calendar.v121.md  dan1-content-calendar.v122.md  dan1-content-calendar.v124-backup-2026-07-05.md  dan1-content-calendar.v127-backup-2026-07-06.md  dan1-content-calendar.v45.md  dan1-content-calendar.v49.md  dan1-content-calendar.v50.md  dan1-content-calendar.v55.md  dan1-content-calendar.v57.md  dan1-content-calendar.v58.md  dan1-content-calendar.v60.md  dan1-content-calendar.v62.md  dan1-content-calendar.v63.md  dan1-content-calendar.v65.md  dan1-content-calendar.v68.md  dan1-content-calendar.v69.md  dan1-content-calendar.v72.md  dan1-content-calendar.v74.md  dan1-content-calendar.v77.md  dan1-content-calendar.v80.md  (+488 more)
apps/dan-glasses-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/dan-glasses-app/src-tauri/capabilities/: default.json
apps/dan-glasses-app/src-tauri/src/: lib.rs  main.rs
(+166 files in other folders)
