[package]
name = "dan-glasses-app"
version = "0.1.0"
description = "Dan Glasses — wearable AI companion. Tauri v2 frontend for the 7-daemon service mesh."
authors = ["DanLab <somdiptonandy@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "dan_glasses_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
